$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

June 24, 2009
-------------
NOISSUE by merlinofchaos: Made blue lagoon pager smaller and italic.
#500978 by Michelle: Got topic list icons working. The reports of their functionality have been greatly exaggerated.
NOISSUE by Michelle: Put the functions in theme.inc into a more logical order so I can find things.
#497450 by Michelle: Changed how forum links are handled. Split core links and added links into two and removed theme_links from reply button.
#497450 by Michelle: More work on the image replacement. Node links are still not right.

June 23, 2009
-------------
#497450 by Michelle: Images on the forum list page converted to CSS.
#497450 by Michelle: Topic list page images converted.

June 22, 2009
-------------
#497474 by Michelle: Rewrite of the style system that adds a dependency on CTools as well as substyles. Adjusted all included styles to take advantage of that.

June 21, 2009
-------------
#219549 by Michelle: Made subforum list generation into a theme function.
NOISSUE by Michelle: Small style fixes.

June 20, 2009
-------------
#303544 by Michelle: Added popup preview of post in topic list.
#462502 by Michelle: Seperated each container on the forum list into its own table.
#219549 by Michelle: Moved subforums into comma seperated list.
#312958 by Michelle: Show container description on container pages.

June 18, 2009
-------------
#484052 by merlinofchaos: Made forum topic list view work with new forum topic list style and also added sticky and shadow post changes.
#484052 by Michelle: Fixed up the topic list pager & the #new.
#484052 by Michelle: Moved topic list view preprocess to its own .inc
#484052 by Michelle: Improved shadow topics including adding a new theme function for them.
#484052 by Michelle: Added "Sticky:" label and changed background color.

June 17, 2009
-------------
#494642 by merlinofchaos: Integrate better with new Views post rendering