@@ -131,8 +131,26 @@
   display: block;
   width: 50px;
   height: 14px;
+  margin-top: 5px;
 }
 
+.comment_edit a  {
+  background: transparent url(images/edit.png) no-repeat top left;
+  text-indent: -9999px;
+  display: block;
+  width: 50px;
+  height: 14px;
+  margin-top: 5px;
+}
+
+.comment_delete a  {
+  background: transparent url(images/delete.png) no-repeat top left;
+  text-indent: -9999px;
+  display: block;
+  width: 50px;
+  height: 14px;
+  margin-top: 5px;
+}
 
 
 
