@@ -318,7 +318,6 @@ ul.forum-links {
 
 .forum-post-links {
   line-height: 2em;
-  text-align: right;
   padding: 0px 5px;
   margin-left: 150px;
 }
